--- a/index.html
+++ b/index.html
@@ -107,10 +107,9 @@
         <div class="text-center">
           Created by
           <a href="https://github.com/SibirskayaDaria" target="_blank">SibirskayaDaria</a>
-        </div>
+        <</div>
       </div>
     </footer>
-    <script src="main.js"></script>
   </body>
 </html>
         
