--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="text-center">
           Created by
           <a href="https://github.com/SibirskayaDaria" target="_blank">SibirskayaDaria</a>
-        <</div>
+        </div>
       </div>
     </footer>
   </body>
